--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>E-Commerce - Zamazon</title>
+    <link rel="shortcut icon" href="/favicon.png" type="image/x-icon" />
+    <title>Zamazon - E-Commerce</title>
   </head>
   <body>
     <div id="root"></div>
